--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "angular-aria": "^1.6.5",
     "angular-material": "^1.1.4",
     "angular-messages": "^1.6.5",
-    "angular-route": "^1.6.5"
+    "angular-route": "^1.6.5",
+    "body-parser": "~1.12.0",
+    "ejs": "^2.5.6",
+    "express": "^4.15.3"
   }
 }
