--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "angular-route": "^1.6.5",
     "body-parser": "~1.12.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "multer": "^1.3.0",
+    "mysql": "^2.5.4"
   }
 }
